--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
 	<link href="{% static 'css/bootstrap-datepicker.css' %}" rel="stylesheet">
 	<link href="{% static 'css/bootstrap-slider.css' %}" rel="stylesheet">
 	<!-- Bootstrap Link End-->
+	 <link rel="stylesheet" href="{% static 'css/custom.css' %}">
 	<!-- Iconmoon Link Start-->
 	<link href="{% static 'css/iconmoon.css' %}" rel="stylesheet">
 	<!-- Iconmoon Link End-->
