--- a/templates/accounts/registeruser.html
+++ b/templates/accounts/registeruser.html
@@ -70,11 +70,29 @@
                                             </div>
                                         </li>
                                         <li>
+                                            <ul class="errorlist"></ul>
+                                            {% for field in form %}
+                                                {% if field.errors %}
+                                                    {% for error in field.errors %}
+                                                       <li style="color:red;">{{error}}</li>
+                                                    {% endfor %}
+                                                {% endif %}
+                                             {% endfor %}
+
+                                             <li style="color:red;">{{form.non_field_errors}}</li>
+                                            </ul>
                                             <div class="row">
                                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                     <div class="field-holder">
                                                         <div class="payment-holder">
                                                             <input type="submit" value="REGISTER" id="btn-next-restaurant-information" class="bgcolor">
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                             <div class="row">
+                                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                                    {% include 'includes/alert.html' %}
                                                         </div>
                                                     </div>
                                                 </div>
