--- a/templates/accounts/registeruser.html
+++ b/templates/accounts/registeruser.html
@@ -11,10 +11,10 @@
 							<div class="user-dashboard loader-holder">
 								<div class="user-holder">
                             <h4 class="text-center" style="margin-bottom: 0;">WELCOME TO FOODONLINE</h4>
-                            <p class="text-center">Please fill this form to get yourself onboarded in the foodOnline marketplace.</p>
+                            <p class="text-center">Join the FoodOnline marketplace by completing the form below.</p>
                             <hr>
                             <div id="restaurant-sets-holder">
-                                <form action="{% url 'registeruser' %}"class="form-fields-set foodbakery-dev-restaurant-form" method="post" action="register-select-package.html">
+                                <form action="{% url 'registeruser' %}"class="form-fields-set foodbakery-dev-restaurant-form" method="post"
                                     {% csrf_token %}
                                     <ul class="register-add-restaurant-tab-container restaurant-information-tab-container">
                                         <li>
