--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -9,8 +9,8 @@
 						<div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
 							<div class="logo">
 								<figure>
-									<a href="index.html" class="light-logo">
-										<img src="{% static 'logo/foodOnline.png' %}" alt="foodOnline" width="250">
+									<a href="{% url 'home' %}" class="light-logo">
+										<img src="{% static 'logo/foodOnlineLogo.png' %}" alt="foodOnline" width="250">
 									</a>
 								</figure>
 							</div>
@@ -56,7 +56,7 @@
 									</nav><!-- .main-navigation -->
 								</div>
 							
-							<div class="main-location">
+							<div class="main-location ml-5">
 								<ul>
 									<li class="location-has-children choose-location">
 										<form action="#">
@@ -70,7 +70,8 @@
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
 							<div class="login-option">
-								<a class="cs-color cs-popup-joinus-btn login-popup" data-target="#sign-in" data-toggle="modal" href="#user-register">Login / Register</a><a class="get-start-btn" href="register-restaurant.html">
+								<a class="cs-color cs-popup-joinus-btn login-popup" data-target="#sign-in" data-toggle="modal" href="#user-register">Login</a> /
+									<span><a href="{% url 'registeruser' %}"class="cs-color cs-popup-joinus-btn login-popup ml-0">Register</a></span><a class="get-start-btn" href="register-restaurant.html">
 									Register
 									Restaurant </a>
 							</div>
