--- a/templates/accounts/ForgotPassword.html
+++ b/templates/accounts/ForgotPassword.html
@@ -10,11 +10,11 @@
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
 							<div class="user-dashboard loader-holder" style="width: 450px; min-height: auto;">
 								<div class="user-holder">
-                            <h4 class="text-center" style="margin-bottom: 0;">SIGN IN </h4>
-                            <p class="text-center">Order from your favorite restaurant</p>
+                            <h4 class="text-center" style="margin-bottom: 0;">Forgot your password?</h4>
+                            <p class="text-center">please enter your email address and we will send you a link to reset your password.</p>
                             <hr>
                             <div id="restaurant-sets-holder">
-                                <form action="{% url 'login' %}"class="form-fields-set foodbakery-dev-restaurant-form" method="post" enctype="multipart/form-data">
+                                <form action="{% url 'ForgotPassword' %}"class="form-fields-set foodbakery-dev-restaurant-form" method="post" enctype="multipart/form-data">
                                     {% csrf_token %}
                                     <ul class="register-add-restaurant-tab-container restaurant-information-tab-container">
                                         <li>
@@ -29,12 +29,6 @@
                                                                         <input type="email" name="email" placeholder="Enter your email address">
                                                                     </div>
                                                                 </div>
-                                                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                                                    <div class="field-holder">
-                                                                        <label>Password</label>
-                                                                        <input type="password" name="password" placeholder="Enter your password">
-                                                                    </div>
-                                                                </div>
                                                         </ul>
                                                     </div>
                                                 </div>
@@ -45,8 +39,7 @@
                                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                     <div class="field-holder">
                                                         <div class="payment-holder">
-                                                            <input type="submit" value="Login" id="btn-next-restaurant-information" class="bgcolor">
-                                                            <a href="{% url 'ForgotPassword' %}" class="float-right">Forgot Password</a>
+                                                            <input type="submit" value="Continue" id="btn-next-restaurant-information" class="bgcolor">
                                                         </div>
                                                     </div>
                                                 </div>
