--- a/templates/accounts/ResetPassword.html
+++ b/templates/accounts/ResetPassword.html
@@ -26,7 +26,7 @@
                                                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                                     <div class="field-holder">
                                                                         <label>Password</label>
-                                                                        <input type="Password" name=">Password" placeholder="Set new password">
+                                                                        <input type="Password" name="Password" placeholder="Set new password">
                                                                     </div>
                                                                 </div>
                                                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
