--- a/FOODONLINE/static/css/custom.css
+++ b/FOODONLINE/static/css/custom.css
@@ -12,4 +12,9 @@
     animation-duration: 5s;
     z-index: 99;
 }
+.btn.btn-info{
+    padding: 2px 1.75cm;
+    font-size: 12px;
+    cursor: pointer;
+}
 
