--- a/templates/includes/cover.html
+++ b/templates/includes/cover.html
@@ -18,7 +18,7 @@
 										<span class="restaurant-title">{{vendor.vendor_name}}</span>
 										<div class="text">
 											<i class="icon-location"></i>
-											<p>Mark ricardo road, lane 27, Austin, Texas, USA.</p>
+											<p>{{ vendor.user_profile.address}}</p>
 										</div>
 									</div>
 								</div>
