--- a/FOODONLINE/static/css/custom.css
+++ b/FOODONLINE/static/css/custom.css
@@ -12,7 +12,7 @@
     animation-duration: 5s;
     z-index: 99;
 }
-.btn.btn-info{
+.btn{
     padding: 2px 1.75cm;
     font-size: 12px;
     cursor: pointer;
