--- a/templates/base.html
+++ b/templates/base.html
@@ -44,6 +44,9 @@
 	<link href="{% static 'css/widget.css' %}" rel="stylesheet">
 	<link href="{% static 'css/responsive.css' %}" rel="stylesheet">
 	<link href="{% static 'css/rtl.css' %}" rel="stylesheet">
+
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 	<!-- Themes / plugin Link End-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script src="{% static 'js/modernizr.js' %}"></script>
