correction of the static file

--- a/templates/accounts/VendorDashboard.html
+++ b/templates/accounts/VendorDashboard.html
@@ -8,7 +8,7 @@
 
  <!-- Main Section Start -->
 		<div class="main-section">
-        <div class="page-section restaurant-detail-image-section" style=" background: url({{ vendor.user_profile.cover_photo.url }}) no-repeat scroll 0 0 / cover;">
+        	<div class="page-section restaurant-detail-image-section" style=" background: url({% if vendor.user_profile.cover_photo %} {{ vendor.user_profile.cover_photo.url }} {% else %} {% static 'images/default-cover.png' %} {% endif %}) no-repeat scroll 0 0 / cover;">
 				<!-- Container Start -->
 				<div class="container">
 					<!-- Row Start -->
