--- a/templates/home.html
+++ b/templates/home.html
@@ -14,11 +14,10 @@
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
 							<div class="element-title">
 								<h1 style="font-size: 40px; color: #505050; text-transform: uppercase; line-height: 50px; margin-bottom: 25px; text-align:center;">
-									Food is our business.
+									                               Food is our business.
                                          Our restaurants craft unforgettable flavors.<br>served fresh every day</h1>
 								<p style="font-size: 18px; letter-spacing: 1px; color: #505050; text-align:center;">
-									Exceptional dining, reimagined.
-                                        From carefully crafted dishes to seamless ordering, experience restaurant-quality meals at your convenience.</p>
+									Dine with food online and cheers to healthy diet </p>
 							</div>
 						</div>
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
@@ -111,46 +110,18 @@
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="padding-right: 0 !important; padding-left: 0 !important;">
 							<div class="company-logo">
 								<ul>
+									{% for vendor in vendors %}
 									<li class="has-border">
 										<figure>
-											<a href="#"><img src="{% static 'extra-images/listing-logo18.png' %}" class="attachment-full size-full wp-post-image" alt=""></a>
+											{% if vendor.user_profile.profile_picture %}
+											<a href="#"><img src="{{ vendor.user_profile.profile_picture.url }}" class="attachment-full size-full wp-post-image" alt=""></a>
+											{% else %}
+												<a href="#"><img src="{% static 'images/default-profile.png' %}" class="attachment-full size-full wp-post-image" alt=""></a>
+											{% endif %}
 										</figure>
 									</li>
-									<li class="has-border">
-										<figure>
-											<a href="#"><img src="assets/extra-images/fb-restaurant-02.jpg" class="attachment-full size-full wp-post-image" alt=""></a>
-										</figure>
 									</li>
-									<li class="has-border">
-										<figure>
-											<a href="#"><img src="assets/extra-images/fb-restaurant-04.jpg" class="attachment-full size-full wp-post-image" alt=""></a>
-										</figure>
-									</li>
-									<li class="has-border">
-										<figure>
-											<a href="#"><img src="assets/extra-images/fb-restaurant-06.jpg" class="attachment-full size-full wp-post-image" alt=""></a>
-										</figure>
-									</li>
-									<li class="has-border">
-										<figure>
-											<a href="#"><img src="assets/extra-images/xlisting-logo03.png.pagespeed.ic_.aT-o9LinEJ.png" class="attachment-full size-full wp-post-image" alt=""></a>
-										</figure>
-									</li>
-									<li class="has-border">
-										<figure>
-											<a href="#"><img src="assets/extra-images/listing-logo09.png" class="attachment-full size-full wp-post-image" alt=""></a>
-										</figure>
-									</li>
-									<li class="has-border">
-										<figure>
-											<a href="#"><img src="assets/extra-images/listing-logo18.png" class="attachment-full size-full wp-post-image" alt=""></a>
-										</figure>
-									</li>
-									<li class="has-border">
-										<figure>
-											<a href="#"><img src="assets/extra-images/fb-restaurant-09.png" class="attachment-full size-full wp-post-image" alt=""></a>
-										</figure>
-									</li>
+									{% endfor %}
 								</ul>
 							</div>
 						</div>
@@ -171,86 +142,34 @@
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<div class="listing fancy">
 								<ul class="row">
+									{% for vendor in vendors %}
 									<li class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 										<div class="list-post featured">
 											<div class="img-holder">
-												<figure><a href="#"><img src="assets/extra-images/listing-logo18.png" class="img-thumb wp-post-image" alt=""></a></figure>
-												<span class="restaurant-status close">
-													<em class="bookmarkRibbon"></em>Close
-												</span>
-											</div>
-											<div class="text-holder">
-												<div class="list-rating">
-													<div class="rating-star">
-														<span class="rating-box" style="width: 100%;"></span>
-													</div>
-													<span class="reviews">(1)</span>
-												</div>
-												<div class="post-title">
-													<h5>
-														<a href="listing-detail.html">Restaurant Demo</a>
-														<span class="sponsored text-color">Sponsored</span>
-													</h5>
-												</div>
-												<address> <span>Type of food : </span> Apple Juice</address>
-												<div class="delivery-potions">
-													<div class="post-time">
-														<i class="icon-motorcycle"></i>
-														<div class="time-tooltip">
-															<div class="time-tooltip-holder"> <b class="tooltip-label">Delivery
-																	time</b>
-																<b class="tooltip-info">Your order will be
-																	delivered in 10
-																	minutes.</b> </div>
-														</div>
-													</div>
-													<div class="post-time">
-														<i class="icon-clock4"></i>
-														<div class="time-tooltip">
-															<div class="time-tooltip-holder"> <b class="tooltip-label">Pickup time</b>
-																<b class="tooltip-info">You can pickup order in
-																	15
-																	minutes.</b> </div>
-														</div>
-													</div>
-													<span>Totnes</span>
-												</div>
-											</div>
-											<div class="list-option">
-												<a href="javascript:void(0);" class="shortlist-btn" data-toggle="modal" data-target="#sign-in">
-													<i class="icon-heart-o"></i>
-												</a>
-											</div>
-										</div>
-									</li>
-									
-									
-									
-									
-									<li class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-										<div class="list-post featured">
-											<div class="img-holder">
-												<figure><a href="#"><img src="assets/extra-images/listing-logo09.png" class="img-thumb wp-post-image" alt=""></a></figure>
+												<figure>
+													<a href="#">
+														{% if vendor.user_profile.profile_picture %}
+														<img src="{{ vendor.user_profile.profile_picture.url }}" class="img-thumb wp-post-image" alt="">
+														{% else %}
+														<img src="{{ vendor.user_profile.profile_picture.url }}" class="img-thumb wp-post-image" alt="">						
+														{% endif %}
+													</a>
+												</figure>
 												<span class="restaurant-status open">
 													<em class="bookmarkRibbon"></em>open
 												</span>
 											</div>
 											<div class="text-holder">
-												<div class="list-rating">
-													<div class="rating-star">
-														<span class="rating-box" style="width: 100%;"></span>
-													</div>
-													<span class="reviews">(1)</span>
-												</div>
+												
 												<div class="post-title">
 													<h5>
-														<a href="listing-detail.html">Classic Restaurant</a>
-														<span class="sponsored text-color">Sponsored</span>
+														<a href="listing-detail.html">{{ vendor }}</a>
+														
 													</h5>
+													<span>{{ vendor.user_profile.city }}, {{ vendor.user_profile.state }}, {{ vendor.user_profile.pin_code }}</span>
 												</div>
-												<address> <span>Type of food : </span> Chicken Roast, Chines
-													Soup, Cold
-													Coffee, Cold Drink, Hot Dogs</address>
+
+												
 												<div class="delivery-potions">
 													<div class="post-time">
 														<i class="icon-motorcycle"></i>
@@ -281,6 +200,7 @@
 											</div>
 										</div>
 									</li>
+									{%endfor%}
 								</ul>
 							</div>
 						</div>
